# n_body_performance_experiment

./: Cargo.toml  Readme.md  build.rs
benches/: nbody_benchmark.rs
examples/: check_layout.rs  check_sizes.rs  debug_buffers.rs  debug_gpu.rs  debug_gpu_detailed.rs  test_buffer_init.rs  test_gpu_10bodies.rs
src/: lib.rs
src/nbody/: cpu_core.rs  cpu_rayon.rs  cpu_single.rs  gpu.rs  mod.rs  nbody.wgsl  shader_types.rs  simd_alligned_core.rs  simd_core.rs  simd_rayon.rs  simd_single.rs  simulation_state.rs  simulation_trait.rs  simulator.rs  tests.rs  types.rs
src/nbody/tests/: comparison_tests.rs  cpu_single_tests.rs  integration_tests.rs  mod.rs
