[package]
name = "nbody_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "27.0.1"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
futures = "0.3.31"
futures-channel = "0.3.31"
rand = "0.9.2"
rayon = "1.11.0"

[dev-dependencies]
criterion = { version = "0.8.0", features = ["async", "async_futures"] }
approx = "0.5.1"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "nbody_benchmark"
harness = false